--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
-_/
-\#*\#
-.*
-!.git*
+*\#*
 *~
-*.bak
-*.swp
-*.swo
-*.new
-/true
-/false
 *.o
-
+*.a
+*.lo
+*.su
+*.so
+*.so.*
+*.dll
+*.dylib
+*.gch
+*.gcov
+*.gcno
+*.gcda
+true
+false
